# mpc_solver

./: .gitignore  CMakeLists.txt  README.md  util_python.ipynb
.devcontainer/ubuntu_environment/: Dockerfile  devcontainer.json
include/: example_model.h  mpc.h
include/Plotting/: colour.h  line.h  plotter.h  resource_manager.h  shader.h  utils.h
resources/shaders/: shader.fs  shader.vs  text.fs  text.vs
src/: CMakeLists.txt  main.cpp
src/Plotting/: glad.c  plotter.cpp  resource_manager.cpp  shader.cpp  utils.cpp
